--- a/index.html
+++ b/index.html
@@ -8,96 +8,153 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
   <style>
+    :root {
+      --glow-color: #00fff7;
+      --bg-gradient: linear-gradient(145deg, #000428, #004e92);
+    }
+
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
-      scroll-behavior: smooth;
     }
 
     body {
       font-family: 'Poppins', sans-serif;
-      background: linear-gradient(to right, #0f0c29, #302b63, #24243e);
+      background: var(--bg-gradient);
       color: #fff;
       overflow-x: hidden;
     }
 
+    a {
+      color: var(--glow-color);
+      text-decoration: none;
+    }
+
     header {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
       text-align: center;
-      padding: 3rem 1rem;
-      animation: fadeInDown 1.2s ease-out;
+      padding: 6rem 2rem 4rem;
+      background: radial-gradient(circle at top, #1e1e2f, transparent);
+      position: relative;
     }
 
     header img {
+      width: 160px;
+      height: 160px;
       border-radius: 50%;
-      width: 150px;
-      height: 150px;
+      border: 4px solid var(--glow-color);
       object-fit: cover;
-      border: 4px solid #fff;
-      box-shadow: 0 0 15px #00f7ff;
+      animation: pulse 2s infinite ease-in-out;
     }
 
-    header h1 {
+    @keyframes pulse {
+      0%, 100% {
+        transform: scale(1);
+        box-shadow: 0 0 15px var(--glow-color);
+      }
+      50% {
+        transform: scale(1.05);
+        box-shadow: 0 0 30px var(--glow-color);
+      }
+    }
+
+    .typewriter {
+      font-size: 3rem;
       font-family: 'Orbitron', sans-serif;
-      margin-top: 1rem;
-      font-size: 2rem;
+      white-space: nowrap;
+      overflow: hidden;
+      width: 0;
+      margin: 1rem auto;
+      animation: typing 3s steps(20, end) forwards;
     }
 
-    header p {
+    @keyframes typing {
+      from { width: 0; }
+      to { width: 100%; }
+    }
+
+    .animated-intro {
       font-size: 1.1rem;
-      opacity: 0.9;
-      margin-top: 0.5rem;
+      margin: 1rem auto;
+      max-width: 600px;
+      animation: fadeInUp 2.5s ease;
+    }
+
+    @keyframes fadeInUp {
+      0% { opacity: 0; transform: translateY(40px); }
+      100% { opacity: 1; transform: translateY(0); }
+    }
+
+    .cv-button {
+      margin-top: 2rem;
+      animation: fadeIn 3s ease-in-out;
+    }
+
+    .cv-button a {
+      display: inline-block;
+      background: var(--glow-color);
+      color: #000;
+      padding: 0.9rem 2.2rem;
+      border-radius: 10px;
+      font-weight: 600;
+      box-shadow: 0 0 15px var(--glow-color);
+      transition: 0.3s ease;
+    }
+
+    .cv-button a:hover {
+      background: #00c9cc;
     }
 
     section {
-      padding: 3rem 2rem;
+      padding: 4rem 2rem;
       max-width: 1200px;
       margin: 0 auto;
     }
 
-    section h2 {
-      font-size: 2rem;
-      margin-bottom: 2rem;
+    h2.section-title {
+      font-size: 2.5rem;
       text-align: center;
+      margin-bottom: 2rem;
+      color: var(--glow-color);
       position: relative;
+      animation: glow 1.5s infinite alternate;
     }
 
-    section h2::after {
-      content: '';
-      width: 80px;
-      height: 4px;
-      background: #00f7ff;
-      position: absolute;
-      bottom: -10px;
-      left: 50%;
-      transform: translateX(-50%);
+    @keyframes glow {
+      from { text-shadow: 0 0 10px var(--glow-color); }
+      to { text-shadow: 0 0 20px var(--glow-color); }
     }
 
     .projects {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
       gap: 2rem;
+      animation: fadeInUp 2s ease;
     }
 
     .project {
-      background: #1e1e2f;
+      background: #111122;
       border-radius: 20px;
       overflow: hidden;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      box-shadow: 0 0 25px rgba(0, 247, 255, 0.3);
+      transition: transform 0.4s ease, box-shadow 0.4s ease;
     }
 
     .project:hover {
-      transform: scale(1.05);
-      box-shadow: 0 0 25px #00f7ff;
+      transform: scale(1.05) rotateZ(-1deg);
+      box-shadow: 0 0 40px rgba(0, 247, 255, 0.8);
     }
 
     .project img {
       width: 100%;
       height: 200px;
       object-fit: cover;
+      animation: hueShift 6s infinite alternate;
+    }
+
+    @keyframes hueShift {
+      0% { filter: hue-rotate(0deg); }
+      100% { filter: hue-rotate(45deg); }
     }
 
     .project-info {
@@ -105,35 +162,61 @@
     }
 
     .project-info h3 {
-      color: #00f7ff;
-      font-size: 1.2rem;
+      font-size: 1.3rem;
+      margin-bottom: 0.5rem;
     }
 
-    .project-info p {
-      margin-top: 0.5rem;
-      font-size: 0.95rem;
+    .contact-container {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 3rem;
+      justify-content: space-between;
+      background: #0d0d1a;
+      padding: 4rem 2rem;
+      border-radius: 20px;
+      box-shadow: 0 0 25px rgba(0, 247, 255, 0.3);
+      animation: fadeInUp 2s ease;
+    }
+
+    .contact-info, .contact-form {
+      flex: 1 1 45%;
+    }
+
+    .contact-info ul {
+      list-style: none;
+    }
+
+    .contact-info li {
+      margin-bottom: 1.5rem;
+      font-size: 1.05rem;
+      line-height: 1.6;
+    }
+
+    .contact-info i {
+      color: var(--glow-color);
+      margin-right: 10px;
     }
 
     .contact-form input,
     .contact-form textarea {
       width: 100%;
-      padding: 0.75rem;
-      margin: 0.5rem 0;
+      padding: 0.9rem;
+      margin: 0.6rem 0;
       border-radius: 10px;
       border: none;
-      background: #2f2f46;
+      background: #1e1e2f;
       color: #fff;
     }
 
     .contact-form button {
-      padding: 0.8rem 2rem;
+      background: var(--glow-color);
+      color: #000;
+      padding: 0.9rem 2rem;
       border: none;
       border-radius: 10px;
-      background: #00f7ff;
-      color: #000;
       font-weight: bold;
       cursor: pointer;
-      transition: background 0.3s;
+      transition: 0.3s ease;
     }
 
     .contact-form button:hover {
@@ -143,29 +226,18 @@
     footer {
       text-align: center;
       padding: 2rem;
-      background: #151521;
+      background: #000014;
     }
 
-    footer .icons a {
-      margin: 0 10px;
-      color: #00f7ff;
-      font-size: 1.5rem;
+    .icons a {
+      margin: 0 12px;
+      color: var(--glow-color);
+      font-size: 1.7rem;
       transition: transform 0.3s ease;
     }
 
-    footer .icons a:hover {
+    .icons a:hover {
       transform: scale(1.3);
-    }
-
-    @keyframes fadeInDown {
-      0% {
-        opacity: 0;
-        transform: translateY(-40px);
-      }
-      100% {
-        opacity: 1;
-        transform: translateY(0);
-      }
     }
   </style>
 </head>
@@ -173,81 +245,68 @@
 <body>
   <header>
     <img src="images/avatar.jpg" alt="Ko Ko Aung">
-    <h1>Ko Ko Aung</h1>
-    <p>Creative Data Analyst transforming complex data into valuable insights</p>
-    <p>Powered by Computer Science</p>
+    <h1 class="typewriter">Ko Ko Aung</h1>
+    <p class="animated-intro">Data Analyst | Creative Thinker | Insight Creator</p>
+    <p class="animated-intro">Welcome to my digital portfolio! I transform raw data into compelling stories and actionable insights. Whether it’s building applications, cleaning massive datasets, or crafting SQL queries, I turn data into decisions.</p>
+    <div class="cv-button">
+      <a href="https://github.com/KoKoAungStar/DataAnalystBootcamp/blob/main/Ko%20Ko%20Aung.pdf" target="_blank"><i class="fas fa-download"></i> Download CV</a>
+    </div>
   </header>
 
-  <section id="about">
-    <h2>About Me</h2>
-    <p>I have over 2 years of experience as a Data Analyst in various organizations. My work begins with developing applications based on user requirements, followed by collecting, cleaning, and transforming data to generate meaningful insights for multiple departments.</p>
-    <p><a href="https://github.com/KoKoAungStar/DataAnalystBootcamp/blob/main/Ko%20Ko%20Aung.pdf" target="_blank" style="color: #00f7ff; text-decoration: underline;">Download My CV</a></p>
-  </section>
-
   <section id="projects">
-    <h2>Projects</h2>
+    <h2 class="section-title">Projects</h2>
     <div class="projects">
       <div class="project">
         <img src="images/thumbs/01.jpg" alt="Excel Project">
         <div class="project-info">
           <h3><a href="https://github.com/KoKoAungStar/DataAnalystBootcamp/blob/main/Excel%20Project.xlsx" target="_blank">Excel Project <i class="fas fa-external-link-alt"></i></a></h3>
-          <p>Data analysis using Microsoft Excel tools.</p>
+          <p>Excel data analysis and visualization.</p>
         </div>
       </div>
       <div class="project">
         <img src="images/thumbs/02.jpg" alt="Covid SQL">
         <div class="project-info">
           <h3><a href="https://github.com/KoKoAungStar/DataAnalystBootcamp/blob/main/COVID%20Portfolio%20Project%20-%20Data%20Exploration.sql" target="_blank">COVID SQL Exploration <i class="fas fa-external-link-alt"></i></a></h3>
-          <p>Exploring COVID data with SQL queries.</p>
+          <p>Exploring COVID trends using SQL queries.</p>
         </div>
       </div>
       <div class="project">
-        <img src="images/thumbs/03.jpg" alt="Data Cleaning">
+        <img src="images/thumbs/03.jpg" alt="Housing Data">
         <div class="project-info">
           <h3><a href="https://github.com/KoKoAungStar/DataAnalystBootcamp/blob/main/Data%20Cleaning%20Portfolio%20Project%20Queries.sql" target="_blank">Housing Data Cleaning <i class="fas fa-external-link-alt"></i></a></h3>
-          <p>Refining housing dataset for deeper insights.</p>
+          <p>Cleaning and preparing housing data for insights.</p>
         </div>
       </div>
       <div class="project">
         <img src="images/thumbs/04.jpg" alt="Amazon Scraper">
         <div class="project-info">
           <h3><a href="https://github.com/KoKoAungStar/DataAnalystBootcamp/blob/main/Amazon%20Web%20Scraper%20Project.ipynb" target="_blank">Amazon Web Scraper <i class="fas fa-external-link-alt"></i></a></h3>
-          <p>Scraping eCommerce data for real-world analysis.</p>
+          <p>Web scraping data from Amazon ecommerce.</p>
         </div>
       </div>
     </div>
   </section>
 
   <section id="contact">
-    <h2>Contact</h2>
-    <form class="contact-form" onsubmit="sendEmail(event)">
-      <input type="text" id="name" placeholder="Your Name" required>
-      <input type="email" id="email" placeholder="Your Email" required>
-      <textarea id="message" placeholder="Your Message" rows="4" required></textarea>
-      <button type="submit">Send Message</button>
-    </form>
+    <h2 class="section-title">Get in Touch</h2>
+    <div class="contact-container">
+      <div class="contact-info">
+        <ul>
+          <li><i class="fas fa-map-marker-alt"></i> No.14, Phueng 28, Soi Sukhumvit 93 Road, Bangkok, Thailand</li>
+          <li><i class="fas fa-phone"></i> 0820493411</li>
+          <li><i class="fas fa-envelope"></i> <a href="mailto:kokoaung.dev@gmail.com">kokoaung.dev@gmail.com</a></li>
+        </ul>
+      </div>
+      <form class="contact-form" onsubmit="sendEmail(event)">
+        <input type="text" id="name" placeholder="Your Name" required>
+        <input type="email" id="email" placeholder="Your Email" required>
+        <textarea id="message" placeholder="Your Message" rows="5" required></textarea>
+        <button type="submit">Send Message</button>
+      </form>
+    </div>
   </section>
 
   <footer>
     <div class="icons">
       <a href="https://www.linkedin.com/in/ko-ko-aung-dev" target="_blank"><i class="fab fa-linkedin"></i></a>
-      <a href="https://github.com/KoKoAungStar" target="_blank"><i class="fab fa-github"></i></a>
-      <a href="mailto:kokoaung.dev@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
-    </div>
-    <p>&copy; 2025 Ko Ko Aung. All rights reserved.</p>
-  </footer>
-
-  <script>
-    function sendEmail(e) {
-      e.preventDefault();
-      const name = document.getElementById('name').value;
-      const email = document.getElementById('email').value;
-      const message = document.getElementById('message').value;
-      const subject = `Message from ${name}`;
-      const body = `${message}\n\nBest regards,\n${name}\nEmail: ${email}`;
-      window.location.href = `mailto:kokoaung.dev@gmail.com?subject=${encodeURIComponent(subject)}&body=${encodeURIComponent(body)}`;
-    }
-  </script>
-</body>
-
-</html>
+      <a href="https://github.com/KoKoAungStar" target="_blank"><i class="fab fa
